# streamswap-contracts

./: .gitignore  Cargo.toml  NOTICE  README.md  SPEC.md  Stream Swap index based spec.md  default_11496148565940971939_0_17615.profraw  default_11496148565940971939_0_18256.profraw  default_12115982305698448073_0_17615.profraw  default_12115982305698448073_0_18256.profraw  default_13481699660749304722_0_17615.profraw  default_13481699660749304722_0_18256.profraw  default_15102606171873042885_0_17615.profraw  default_15102606171873042885_0_18256.profraw  default_3872258109972948845_0_17615.profraw  default_3872258109972948845_0_18256.profraw  default_8161120396104746601_0_17615.profraw  default_8161120396104746601_0_18256.profraw  streamswap.md  tarpaulin-report.html
.circleci/: config.yml
.github/: codecov.yml
.github/workflows/: Basic.yml  Release.yml  basic.yml  codecov.yml  release.yml
artifacts/: checksums.txt  checksums_intermediate.txt  cw_streamswap.wasm  streamswap_controller.wasm  streamswap_factory.wasm  streamswap_stream.wasm
contracts/controller/: Cargo.toml
contracts/controller/src/: contract.rs  error.rs  helpers.rs  lib.rs  state.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  error.rs  state.rs
contracts/stream/: Cargo.toml
contracts/stream-swap/: Cargo.toml
contracts/stream-swap-factory/: Cargo.toml
contracts/stream-swap-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  payment_checker.rs  state.rs
contracts/stream-swap/src/: contract.rs  helpers.rs  killswitch.rs  msg.rs  state.rs  tests.rs  threshold.rs
contracts/stream/src/: circuit_ops.rs  contract.rs  error.rs  helpers.rs  killswitch.rs  lib.rs  pool.rs  state.rs  stream.rs  stream_helpers.rs  tests.rs  vesting.rs
contracts/streamswap-factory/: Cargo.toml
contracts/streamswap-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  payment_checker.rs  state.rs
contracts/streamswap-stream/: Cargo.toml
contracts/streamswap-stream/src/: contract.rs  error.rs  helpers.rs  killswitch.rs  msg.rs  state.rs  threshold.rs
examples/: schema.rs
integration-tests/: Cargo.toml
integration-tests/src/: clp_pool.rs  lib.rs
scripts/: optimize.sh  schema.sh
src/: contract.rs  error.rs  helpers.rs  killswitch.rs  lib.rs  math.rs  migrate_v0_1_0.rs  migrate_v0_1_4.rs  migrate_v0_2_1.rs  msg.rs  scenario_tests.rs  state.rs  sudo.rs  test_helpers.rs  tests.rs  threshold.rs
test_scenarios/: test
testing/: Cargo.toml
testing/src/: lib.rs
testing/src/helpers/: mock_messages.rs  mod.rs  setup.rs  stargate.rs  suite.rs  utils.rs
testing/src/tests/: factory_instantiate.rs  mod.rs
testing/src/tests/factory_tests/: factory_freeze.rs  instantiate.rs  mod.rs  params_update.rs
testing/src/tests/stream_swap_tests/: create_stream.rs  finalize_stream.rs  mod.rs  operator.rs  subscribe.rs  update_position.rs  update_stream.rs  withdraw.rs
testing/src/tests/streamswap_tests/: cancel_stream.rs  create_stream.rs  exit_cancel.rs  finalize_stream.rs  mod.rs  operator.rs  pause_protocol_admin.rs  pool.rs  resume_protocol_admin.rs  resume_stream.rs  rounding_leftover.rs  shares.rs  subscribe.rs  threshold.rs  update_position.rs  update_stream.rs  vesting.rs  withdraw.rs  withdraw_paused.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/src/factory_tests/: factory_freeze.rs  instantiate.rs  params_update.rs
tests/src/helpers/: mock_messages.rs  setup.rs  stargate.rs  suite.rs  utils.rs
tests/src/stream_tests/: cancel_stream.rs  create_stream.rs  exit_cancel.rs  finalize_stream.rs  mod.rs  operator.rs  pool.rs  rounding_leftover.rs  subscribe.rs  threshold.rs  update_position.rs  update_stream.rs  vesting.rs  withdraw.rs
tests/src/tests/: mod.rs
tests/src/tests/controller_tests/: controller_freeze.rs  instantiate.rs  list_streams.rs  mod.rs  params_update.rs
tests/src/tests/factory_tests/: factory_freeze.rs  instantiate.rs  params_update.rs
tests/src/tests/streamswap_tests/: cancel_stream.rs  create_stream.rs  exit_cancel.rs  exit_stream.rs  finalize_stream.rs  mod.rs  operator.rs  pause_protocol_admin.rs  pool.rs  resume_protocol_admin.rs  resume_stream.rs  rounding_leftover.rs  shares.rs  subscribe.rs  sync_position.rs  sync_stream.rs  threshold.rs  update_position.rs  update_stream.rs  vesting.rs  withdraw.rs  withdraw_paused.rs
ts/: codegen_script.ts  package.json
ts/types/: StreamSwapController.client.ts  StreamSwapController.message-composer.ts  StreamSwapController.types.ts  StreamSwapFactory.client.ts  StreamSwapFactory.message-composer.ts  StreamSwapFactory.types.ts  StreamSwapStream.client.ts  StreamSwapStream.message-composer.ts  StreamSwapStream.types.ts  index.ts
