[workspace]
members = [
    "contracts/*",
    "packages/interface",
    "packages/types",
    "tests"
]
resolver = "2"

[workspace.package]
authors =  ["Orkun Külçe <orkunkl@users.noreply.github.com>", "Adnan Deniz Çorlu<adenizcorlu@users.noreply.github.com"]
edition    = "2021"
homepage   = "https://www.streamswap.io/"
license    = "Apache-2.0"
repository = "https://github.com/StreamSwapProtocol/"
version    = "0.2.0-beta"

[workspace.lints.clippy]
too_many_arguments = "allow"
module_inception = "allow"

[workspace.dependencies]
cosmwasm-schema = "1.5.7"
cosmwasm-std    = { version = "1.5.7", features = ["iterator", "staking", "stargate", "cosmwasm_1_2"] }
cw-controllers  = "1.1.2"
cw-denom        = "2.3.0"
cw-multi-test   = { version = "0.20.1", features = ["cosmwasm_1_2"] }
cw-storage-plus = "1.2.0"
cw-utils        = "1.0.3"
cw-vesting      = { version = "2.3.0", features = ["library"] }
cw-orch         = { version = "0.24.1" }
cw2             = "1.1.2"
osmosis-std     = "0.25.0"
osmosis_prost = { version = "0.13.1", package = "prost" }
schemars        = "0.8.11"
semver          = "1.0.16"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.38" }

# contracts
streamswap-controller = { path = "./contracts/controller" }
streamswap-stream     = { path = "./contracts/stream" }

# packages
streamswap-types = { path = "./packages/types" }
streamswap-utils = { path = "./packages/utils" }

# interface
streamswap-interface = { path = "./packages/interface" }

# tests
streamswap-tests = { path = "./tests" }

[workspace.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/workspace-optimizer:0.16.0
"""
