[package]
authors     = ["Adnan Deniz Corlu <adenizcorlu@gmail.com>"]
name = "testing"
edition = { workspace = true }
version     = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
doctest = false
[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]


[dependencies]
cosmwasm-schema      = { workspace = true }
cosmwasm-std = { workspace = true }
cw-controllers       = { workspace = true }
cw2                  = { workspace = true }
streamswap-stream = { workspace = true }
streamswap-factory = { workspace = true }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw-vesting = { workspace = true }
schemars = "0.8.16"
cw-multi-test = { workspace = true }
