[package]
name = "streamswap-stream"
version = { workspace = true }
edition = { workspace = true }
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[profile.release]
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-controllers= { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils ={ workspace = true }
cw2 ={ workspace = true }
schemars ={ workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
osmosis-std = { workspace = true }
streamswap-factory = { path = "../streamswap-factory" }


[dev-dependencies]
cw-multi-test = "0.16.2"
